--- a/lessons/notebook.ipynb
+++ b/lessons/notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,82 @@
    ],
    "source": [
     "print(f'Another reference to {name} in this cell.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Useful Keyboard Shortcuts\n",
+    "\n",
+    "1. `Control+Enter`  Execute a cell and leave the focus / cursor in that cell\n",
+    "2. `Shift+Enter`  Execute a cell and move to the next cell or create a new cell at the end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some fancy computation...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "201110.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('Some fancy computation...')\n",
+    "total: float = 110.0 + 1000.0\n",
+    "total + 200_000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expressions written as the last line of a cell are automatically output\n",
+    "\n",
+    "This is very handy for not needing to call the `print`  function at the end of a cell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example of Importing a Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import notebook_helpers\n",
+    "notebook_helpers.add_two_ints(20, 22)"
    ]
   }
  ],
