--- a/lessons/ls27_filter.ipynb
+++ b/lessons/ls27_filter.ipynb
@@ -17,9 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'high': [77, 84, 78, 79, 65, 67, 74, 61, 55, 61], 'low': [67, 51, 64, 45, 43, 53, 56, 37, 34, 42], 'rain': [0.3, 0.2, 0.4, 0.8, 0.0, 0.2, 0.4, 0.5, 0.1, 0.1]}\n"
+     ]
+    }
+   ],
    "source": [
     "col_data: dict[str, list[float]] = {\n",
     "    \"high\": [77, 84, 78, 79, 65, 67, 74, 61, 55, 61],\n",
@@ -27,7 +35,107 @@
     "    \"rain\": [.3, .2, .4, .8, 0., .2, .4, .5, .1, .1]\n",
     "}\n",
     "\n",
-    "col_data"
+    "print(col_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Produce a 'mask' based on criteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, True, False, False, True, True, False, False, True, True]\n",
+      "\n",
+      "\n",
+      "[False, False, False, False, False, False, False, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def less_than(col: list[float], threshold: float) -> list[bool]:\n",
+    "    return list(num < threshold for num in col)\n",
+    "\n",
+    "\n",
+    "no_rain_mask: list[bool] = less_than(col_data[\"rain\"], 0.3)\n",
+    "print(no_rain_mask)\n",
+    "print('\\n')\n",
+    "print(less_than(col_data[\"high\"], 65))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Masked Function\n",
+    "\n",
+    "Takes in a column and a list of masks (bool values), returns only the values in the input column where the corresponding mask is True.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[84, 65, 67, 55, 61]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def masked(col: list[float], mask: list[bool]) -> list[float]:\n",
+    "    return list(col[i] for i in range(0, len(col)) if mask[i])\n",
+    "\n",
+    "masked(col_data[\"high\"], no_rain_mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean(col: list[float]) -> float:\n",
+    "   return sum(col) / len(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def not_mask(mask: list[bool]) -> list[bool]:\n",
+    "  return list(not item for item in mask)\n",
+    "  \n",
+    "mask_a: list[bool] = less_than(col_data[\"high\"], 80)\n",
+    "mask_b: list[bool] = not_mask(mask_a)\n",
+    "\n",
+    "values: list[float] = masked(col_data[\"low\"], mask_b)\n",
+    "print(mean(values))"
    ]
   }
  ],
@@ -50,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4
  },
